--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.6.0",
-    "node-sass": "^7.0.1",
     "react": "^16.14.0",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^16.14.0",
     "react-icons": "^3.11.0",
     "react-scripts": "^5.0.1",
-    "react-scroll": "^1.8.3"
+    "react-scroll": "^1.8.3",
+    "sass": "^1.52.3"
   },
   "scripts": {
     "start": "react-scripts start",
